Fix scrollbar design

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,9 +1,9 @@
 $transparency: rgba(100, 100, 100, 0.2)
 
 ::-webkit-scrollbar
-    height: 5px
-    width: 5px
-    background: none
+    height: 5px // For horizontal scrollbars
+    width: 5px // For vertical scrollbars
+    background: rgba(0,0,0,.8)
 
 ::-webkit-scrollbar-thumb
     background: rgb(200,200,200)
